--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
     </div>
   <div style="grid-column: 2; grid-row: 2; font-size: 1.1em; font-weight: bold; text-align: left; padding-left: 1em; text-indent: -1em; line-height: 1.4em;">
     <div><strong>Key:</strong></div>
-    <div style="font-weight: normal;">🔴 Not yet acquired<br>🟠 50% of children<br>🟡 75% of children<br>🟢 90% of children</div>
+    <div style="font-weight: normal;">🔴 Less than 50% <br>🟠 50% of children<br>🟡 75% of children<br>🟢 90% of children</div>
     <br>
-    <div><strong>Based on:</strong> Combined data from 15 studies of 18,907 children acquiring English in the United States</div>
-    <div><strong>Data source:</strong> Crowe, K., & McLeod, S. (2020). <i>Children's English consonant acquisition in the United States: A review.</i> <i>American Journal of Speech-Language Pathology, 29</i>(4), 2155–2169. <a href="https://doi.org/10.1044/2020_AJSLP-19-00168" target="_blank">https://doi.org/10.1044/2020_AJSLP-19-00168</a></div>
-    <div><strong>Visualization created by:</strong> Imran Musaji, PhD CCC-SLP, Wichita State University</div>
+    <div>Based on:</strong> Combined data from 15 studies of 18,907 children acquiring English in the United States</div>
+    <div>Data source:</strong> Crowe, K., & McLeod, S. (2020). <i>Children's English consonant acquisition in the United States: A review.</i> <i>American Journal of Speech-Language Pathology, 29</i>(4), 2155–2169. <a href="https://doi.org/10.1044/2020_AJSLP-19-00168" target="_blank">https://doi.org/10.1044/2020_AJSLP-19-00168</a></div>
+    <div>Visualization created by:</strong> Imran Musaji, PhD CCC-SLP, Wichita State University</div>
   </div>
 </div>
 </body>
