--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <div><strong>Key:</strong></div>
     <div style="font-weight: normal;">🔴 Less than 50% <br>🟠 50% of children<br>🟡 75% of children<br>🟢 90% of children</div>
     <br>
-    <div style="font-weight: normal;">Based on: Combined data from 15 studies of 18,907 children acquiring English in the United States</div>
-    <div style="font-weight: normal;">Data source: Crowe, K., & McLeod, S. (2020). <i>Children's English consonant acquisition in the United States: A review.</i> <i>American Journal of Speech-Language Pathology, 29</i>(4), 2155–2169. <a href="https://doi.org/10.1044/2020_AJSLP-19-00168" target="_blank">https://doi.org/10.1044/2020_AJSLP-19-00168</a></div>
-    <div style="font-weight: normal;">Visualization created by:</strong> Imran Musaji, PhD CCC-SLP, Wichita State University</div>
+    <div style="font-weight: normal;"><strong>Based on:</strong> Combined data from 15 studies of 18,907 children acquiring English in the United States</div>
+    <div style="font-weight: normal;"><strong>Data source: </strong> Crowe, K., & McLeod, S. (2020). <i>Children's English consonant acquisition in the United States: A review.</i> <i>American Journal of Speech-Language Pathology, 29</i>(4), 2155–2169. <a href="https://doi.org/10.1044/2020_AJSLP-19-00168" target="_blank">https://doi.org/10.1044/2020_AJSLP-19-00168</a></div>
+    <div style="font-weight: normal;"><strong>Visualization created by:</strong> Imran Musaji, PhD CCC-SLP, Wichita State University</div>
   </div>
 </div>
 </body>
