--- a/index.html
+++ b/index.html
@@ -226,15 +226,15 @@
       <div><strong>Based on:</strong> Combined data from 15 studies of 18,907 children acquiring English in the United States</div>
       <br>
       <div>
-        <strong>Data source:</strong> Crowe, K., & McLeod, S. (2020).<br>
-        <i>Children's English consonant acquisition in the United States: A review.</i><br>
+        <strong>Data source:</strong> <br> Crowe, K., & McLeod, S. (2020).<br>
+        Children's English consonant acquisition in the United States: A review.<br>
         <i>American Journal of Speech-Language Pathology, 29</i>(4), 2155–2169.<br>
         <a href="https://doi.org/10.1044/2020_AJSLP-19-00168" target="_blank">
           https://doi.org/10.1044/2020_AJSLP-19-00168
         </a>
       </div>
       <div style="margin-top: 0.5em;">
-        <em>Visualization by Imran Musaji, PhD CCC-SLP, Wichita State Universit</em>
+        <strong>Visualization by</strong> Imran Musaji, <em>PhD CCC-SLP, Wichita State University </em>
       </div>
       <br>
       <div>
