--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <span style="color:red;">🔴</span> Not yet acquired &nbsp;
         <span style="color:orange;">🟠</span> 50% of children &nbsp;
         <span style="color:yellow;">🟡</span> 75% of children &nbsp;
-        <span style="color:green;">🟢</span> 90% of children
+        <span style="color:green;">🟢</span> 90% of children <br><br>
       </div>
       
       <!-- Moved subtitle element -->
