--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
         <span style="color:red;">🔴</span> Not yet acquired &nbsp;
         <span style="color:orange;">🟠</span> 50% of children &nbsp;
         <span style="color:yellow;">🟡</span> 75% of children &nbsp;
-        <span style="color:green;">🟢</span> 90% of children <br>
+        <span style="color:green;">🟢</span> 90% of children <br><br>
       </div>
       
       <button onclick="previousStep()">◀ Previous</button>
       <button onclick="nextStep()">Next ▶</button>
     </div>
-    
+    <br><br>
 <!-- Moved subtitle element -->
       <div id="subtitle">
         This animated chart shows when children typically master different English consonant sounds.
