--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </a>
       </div>
       <div style="margin-top: 0.5em;">
-        <strong>Visualization by</strong> <br>Imran Musaji, <em>PhD CCC-SLP, <br>Wichita State University</em>
+        <strong>Visualization by</strong> <br>Imran Musaji, <em>PhD CCC-SLP, Wichita State University</em>
       </div>
       <br>
       <div>
